tests/rosetta/out/Go/calendar---for-real-programmers-2.error
parse: error[P052]: tests/rosetta/x/Mochi/calendar---for-real-programmers-2.mochi:15:59: unexpected token "=" (expected ")")
  --> tests/rosetta/x/Mochi/calendar---for-real-programmers-2.mochi:15:59

 15 |     print("      " + months[qtr*3+mi] + "           ", end="")
    |                                                           ^

help:
  Unbalanced parentheses. Check for missing `(` or `)`.